# simple-alert-proxy

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  worklog.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  devel-image.yml  nightly.yml  release.yml  sbom.yml  scorecard.yml
deploy/systemd/: prepare-simple-alert-proxy-tls.sh  simple-aleert-proxy.default  simple-alert-proxy.container  simple-alert-proxy.default
docs/: ALERT_WEBHOOK_GATEWAY_OPENSPEC.md  ALERT_WEBHOOK_GATEWAY_PRD.md  COMPATIBILITY.md  SPEC.md
examples/: config.yaml  generic-json-webhook.json  signoz-webhook-disk-space.json  signoz-webhook.json
journal/: 2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-11.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-22.md  2026-07-23.md  2026-07-24.md
src/: alert.rs  config.rs  google_chat.rs  integration.rs  main.rs  redaction.rs  routing.rs  signoz.rs  storage.rs  tls.rs  ui.rs
